# SchedulrX

./: .dockerignore  .gitignore  COMPLIANCE.md  Dockerfile  MANIFEST.in  README.md  api.py  app.py  baseline.py  dashboard.py  entrypoint.sh  env.py  gym_env.py  index.html  inference.py  nginx.conf  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  rl_agent.py  train.py  verify_god_tier.py
files (3)/: README.md  api.py  app.py  baseline.py  env.py  gym_env.py  inference.py
models/: schemas.py
schedulrx/: __init__.py  agent.py  graders.py  reward.py  seed.py
schedulrx/server/: app.py  env.py
server/: app.py  env.py
server/templates/: dashboard.html
tasks/: hard_adversarial.json  level2_conflict.json  level3_dynamic.json
templates/: dashboard.html
