[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schedulrx"
version = "1.0.0"
description = "Multi-participant meeting scheduler with hidden human constraints for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenEnv Developer", email = "dev@openenv.ai"}
]
keywords = ["openenv", "benchmarking", "agent-evaluation", "scheduling"]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pytz>=2024.1",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "gymnasium>=0.29.0",
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "altair>=5.0.0"
]

[project.urls]
Homepage = "https://huggingface.co/spaces/openenv/schedulrx"

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "schedulrx"
type = "environment"
tags = ["openenv", "scheduling", "real-world"]
