[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schedulrx"
version = "2.2.0"
description = "A high-fidelity POMDP environment for evaluating agentic planning under partial observability."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "Krsnapriya", email = "research@example.com" }
]
keywords = ["openenv", "scheduling", "pomdp", "agentic-ai"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pytz>=2024.1",
    "openai>=1.20.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.1"
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Krsnapriya/meeting-scheduler-openenv"
Repository = "https://github.com/Krsnapriya/SchedulrX"

[tool.setuptools]
packages = ["models"]
py-modules = ["env", "app", "inference"]
include-package-data = true
